Ensure images align exactly for mobile/tablet.
Former-commit-id: 27eb4a63da35ce2bbfa2516ea2670071b3e49089 [formerly 144ef55a2246c922833f402a09ef271ded811247 [formerly 5aa4a6cffb9687903ab64316517515d9b9fa460e]]
Former-commit-id: d27b51d4d3538b564acb81225fc6026a7ff2956a
Former-commit-id: 4df4906fa23250311dcdd68588e1a8ed0251bf17 [formerly 0f081746750aca95f34c8d994bd5f545d288710c]
Former-commit-id: 6c9a599b986c76099e5e45e0bfd2d326461db78a

--- a/frontend/app/assets/stylesheets/_static.scss
+++ b/frontend/app/assets/stylesheets/_static.scss
@@ -421,6 +421,13 @@ body.thank-you {
 				width: emCalc(484px);
 				height: emCalc(484px);
 			}
+			/* Just mobile, custom width */
+			@media only screen and (max-width: 320px) {
+				li, li:first-child {
+					width: emCalc(242px);
+					height: emCalc(242px);
+				}
+			}
 			&.odd {
 				li {
 					float: left;
@@ -431,11 +438,12 @@ body.thank-you {
 					float: right;
 				}
 			}
-			/* Just mobile, custom width */
-			@media only screen and (max-width: 320px) {
-				li, li:first-child {
-					width: emCalc(242px);
-					height: emCalc(242px);
+			/* All non-desktop, custom width */
+			@media only screen and (max-width: 1080px) {
+				&.odd, &.even {
+					li {
+						float: left;
+					}
 				}
 			}
 		}
